[gd_scene load_steps=3 format=3 uid="uid://dh4fobbiel1cv"]

[ext_resource type="Script" uid="uid://pwlh13n5jcbh" path="res://scenes/PlayScene.gd" id="1_ot0y2"]
[ext_resource type="PackedScene" uid="uid://djc0xavgi00no" path="res://scenes/objects/PlayHud.tscn" id="5_21h8x"]

[node name="PlayScene" type="Node2D"]
script = ExtResource("1_ot0y2")

[node name="inst" type="AudioStreamPlayer" parent="."]

[node name="playerVoices" type="AudioStreamPlayer" parent="."]

[node name="opponentVoices" type="AudioStreamPlayer" parent="."]

[node name="camera" type="Camera2D" parent="."]

[node name="PlayHud" parent="." instance=ExtResource("5_21h8x")]

[node name="countdownSpawner" type="Node2D" parent="PlayHud"]
